--- a/blackjack.html
+++ b/blackjack.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>BlackJack</title>
-  <link href="https://fonts.googleapis.com/css?family=Kumar+One" rel="stylesheet">
+  <title>BlackJack.</title>
+  
  
 </head>
 
