--- a/bj.html
+++ b/bj.html
@@ -121,7 +121,7 @@ function determineWinner()
 <div>
   <h2>Lets Play BlackJack</h2>
 
-  <center>
+  <right>
     Dealer:<input type="text" id="dealer">
     <br> Player:
     <input type="text" id="you">
@@ -131,8 +131,8 @@ function determineWinner()
     <input type=button value="DEAL" onClick="GenerateNewCard()">
     <br>
     <br>
-  </center>
-  <center>
+  </right>
+  <right>
     <table id="resultat">
       <tr>
         <th>HUMAN</th>
@@ -145,9 +145,9 @@ function determineWinner()
         <td id="COUNT"></td>
       </tr>
     </table>
-  </center>
+  </right>
   <br>
-  <center>
+  <right>
     <h2>Stats</h2>
     <table id="stat">
       <tr>
@@ -158,7 +158,7 @@ function determineWinner()
       <td id="COMPW"></td>
       </div>
     </table>
-  </center>
+  </right>
 </body>
 
 </html>﻿
