--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+<script>
 
 var gameOver; var cardCount;
 function Shuffle(max){
@@ -101,6 +101,6 @@ document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
-
+</script>
 </body>
 </html>
