--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank</title>
+  <title>BJjavascriptbank..</title>
 </head>
 
 <body>
 <script>
 
+
+// Mike McGrath (mike_mcgrath@lineone.net)
+<!-- Begin
 var gameOver; var cardCount;
 function Shuffle(max){
 var num=Math.random()*max;
@@ -101,6 +104,9 @@ document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
+window.onload = setBj;
+// End -->
+
 </script>
 </body>
 </html>
