--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank..</title>
+  <title>BJjavascriptbank....</title>
 </head>
 
 <body>
-<script>
 
 
+
+<SCRIPT LANGUAGE="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
 var gameOver; var cardCount;
@@ -104,9 +105,11 @@ document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
-window.onload = setBj;
 // End -->
-
 </script>
+	<!--
+    	This script downloaded from www.JavaScriptBank.com
+    	Come to view and download over 2000+ free javascript at www.JavaScriptBank.com
+	-->
 </body>
 </html>
