--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank....</title>
+  <title>BJjavascriptbank!!</title>
 </head>
 
 <body>
 
 
 
-<SCRIPT LANGUAGE="JavaScript">
+<script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
 var gameOver; var cardCount;
@@ -111,5 +111,6 @@ document.display.say2.value="    To Start!";
     	This script downloaded from www.JavaScriptBank.com
     	Come to view and download over 2000+ free javascript at www.JavaScriptBank.com
 	-->
+
 </body>
 </html>
