--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -9,6 +9,7 @@
 
 
 <script language="JavaScript">
+
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
 var gameOver; var cardCount;
@@ -105,7 +106,9 @@ document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
+window.onload = setBj;
 // End -->
+
 </script>
 	<!--
     	This script downloaded from www.JavaScriptBank.com
