--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank!</title>
+  <title>BJjavascriptbank--</title>
 </head>
 
 <body>
@@ -106,7 +106,7 @@ document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
-window.onload = setBj;
+
 // End -->
 
 </script>
