--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank--</title>
+  <title>BJjavascriptbank-00</title>
 </head>
 
 <body>
@@ -100,7 +100,7 @@ gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
 }
 function setBj(){
 gameOver=0; cardCount=0; 
-document.display.dealer.value=""; 
+
 document.display.you.value="";
 document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
