--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank-FORM</title>
+  <title>BJjavascriptbank-F</title>
   <script language="JavaScript">
 
 // Mike McGrath (mike_mcgrath@lineone.net)
@@ -94,16 +94,15 @@ gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
 }
 function setBj(){
 gameOver=0; cardCount=0; 
-document.display.dealer.value="";
+document.display.dealer.value=""; 
 document.display.you.value="";
 document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
-
 // End -->
-
 </script>
+	
 </head>
 
 <body>
