--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank-F</title>
+  <title>BJjavascriptbankS</title>
   <script language="JavaScript">
-
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
 var gameOver; var cardCount;
@@ -100,6 +99,7 @@ document.display.numgames.value="0";
 document.display.say1.value="    Hit 'Deal'";
 document.display.say2.value="    To Start!";
 }
+window.onload = setBj;
 // End -->
 </script>
 	
