--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbankS</title>
+  <title>BJjavascriptbank</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -10,6 +10,7 @@ function Shuffle(max){
 var num=Math.random()*max;
 return Math.round(num)+1;
 }
+	  
 function getSuit(){
 suit = Shuffle(4);
 if(suit == 1) return "Spades";
@@ -24,7 +25,7 @@ if(card == 12) return "Queen";
 if(card == 13) return "King";
 return "" + card;
 }
-function cardValue(card,strWho){
+function cardValue(card,strWho){ //strwho để xác định lượt
 if(card == 1) {
 	if(strWho =="You" && document.display.you.value >10){
 	document.display.say2.value=document.display.say2.value+" Low"; return 1;}
@@ -33,17 +34,17 @@ if(card == 1) {
 return card;
 }
 function PickACard(strWho){
-card = Shuffle(12);
+card = Shuffle(12); //tại sao 12???????????
 suit = getSuit();
 if(strWho =="You")
-document.display.say2.value=(cardName(card) + " of " + suit);
+document.display.say2.value=(cardName(card) + " of " + suit); //say2 là bài của người chơi
 else
-document.display.say1.value=(cardName(card) + " of " + suit);
+document.display.say1.value=(cardName(card) + " of " + suit);//say1 là bài của máy (dealer)
 return cardValue(card,strWho);
 }
-function NewHand(form){
-if(gameOver !=0)
-{form.say1.value=("Hand in Play!"); form.say2.value=(""); return;}
+function NewHand(form){  
+if(gameOver !=0) //gameOver là biến boolean thì phải, xem đã hết game chưa ??? bằng 0 là hết game rồi ???
+{form.say1.value=("Hand in Play!"); form.say2.value=(""); return;} 
 else
 {form.dealer.value = 0; form.you.value = 0; cardCount=0;
 form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");
@@ -57,13 +58,13 @@ else
 if(form.you.value<10)
 {form.say1.value=("Not Below Ten!"); form.say2.value=("Take a Hit!"); return;}
 else
-if (cardCount <2)
+if (cardCount <2) //cardCount để đếm bài, tối đa mỗi người phải có 2 quân
 {form.say1.value=("Minimum 2 Cards!"); form.say2.value=("Hit Again!"); return;}
 else
-while(form.dealer.value < 17)
+while(form.dealer.value < 17) //máy bốc liên tiếp cho đến khi có >17 điểm
 {form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");}
 }
-function User(form){
+function User(form){   
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
 else
