--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -121,10 +121,10 @@ window.onload = setBj;
 <td><center>Card(s):  <input type="text" name="say2" size="18" value=""></center></td>
 </tr>
 <tr>
-<td><center><input type="button" value="Deal" onclick="NewHand(this.form)"></center></td> //Deal:
+<td><center><input type="button" value="Deal" onclick="NewHand(this.form)"></center></td> 
 <td colspan="3"><center>
-<input type="button" value="Stand" onclick="Dealer(this.form);LookAtHands(this.form);">  //Người chơi dừng bài rồi máy ms bốc :)
-<input type="button" value=" Hit " onclick="User(this.form)"></center></td></tr>         //
+<input type="button" value="Stand" onclick="Dealer(this.form);LookAtHands(this.form);">  
+<input type="button" value=" Hit " onclick="User(this.form)"></center></td></tr>         
 </tbody></table>
 </form>
 
