--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank</title>
+  <title>BJjavascriptbank.</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -107,7 +107,7 @@ window.onload = setBj;
 
 <body>
 <form name="display">
-<table bgcolor="#c0c0c0" border="1" cellspacing="0" cellpadding="3">
+<table bgcolor="#c0c0c0" border="1" cellspacing="0" cellpadding="3" align="center">
 <tbody><tr>
 <td><center>Score:</center></td>
 <td><center>Dealer</center></td>
@@ -125,7 +125,8 @@ window.onload = setBj;
 <td colspan="3"><center>
 <input type="button" value="Stand" onclick="Dealer(this.form);LookAtHands(this.form);">  
 <input type="button" value=" Hit " onclick="User(this.form)"></center></td></tr>         
-</tbody></table>
+</tbody>
+</table>
 </form>
 
 
