--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -107,7 +107,7 @@ window.onload = setBj;
 
 <body>
 <form name="display">
-<table bgcolor="#c0c0c0" border="1" cellspacing="0" cellpadding="3" align="center">
+<table bgcolor="#c0c0c0" border="1" cellspacing="0" cellpadding="3" align="center"> <!--thêm align="center-->
 <tbody><tr>
 <td><center>Score:</center></td>
 <td><center>Dealer</center></td>
