--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BJjavascriptbank.</title>
+  <title>Blackjack</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -24,7 +24,7 @@ if(card == 12) return "Queen";
 if(card == 13) return "King";
 return "" + card;
 }
-function cardValue(card,strWho){ //strwho để xác định lượt
+function cardValue(card,strWho){                                                //biến strwho để xác định lượt
 if(card == 1) {
 	if(strWho =="You" && document.display.you.value >10){
 	document.display.say2.value=document.display.say2.value+" Low"; return 1;}
@@ -36,9 +36,9 @@ function PickACard(strWho){
 card = Shuffle(12); //tại sao 12?????????????????????????????????????????????????????
 suit = getSuit();
 if(strWho =="You")
-document.display.say2.value=(cardName(card) + " of " + suit); //say2 là bài của người chơi
+document.display.say2.value=(cardName(card) + " of " + suit);                   //say2 là bài của người chơi
 else
-document.display.say1.value=(cardName(card) + " of " + suit);//say1 là bài của máy (dealer)
+document.display.say1.value=(cardName(card) + " of " + suit);			//say1 là bài của máy (dealer)
 return cardValue(card,strWho);
 }
 function NewHand(form){  
@@ -50,25 +50,30 @@ form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");
 form.you.value = eval(form.you.value) + PickACard("You");
 gameOver= -1; cardCount+=1;}
 }
-function Dealer(form){
+function Dealer(form){                               //function để máy bốc bài, called khi ấn 'STAND'
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
 else
 if(form.you.value<10)
 {form.say1.value=("Not Below Ten!"); form.say2.value=("Take a Hit!"); return;}
 else
-if (cardCount <2) //cardCount để đếm bài, tối đa mỗi người phải có 2 quân
+if (cardCount <2) 					//cardCount để đếm bài, tối đa mỗi người phải có 2 quân
 {form.say1.value=("Minimum 2 Cards!"); form.say2.value=("Hit Again!"); return;}
 else
-while(form.dealer.value < 17) //máy bốc liên tiếp cho đến khi có >17 điểm
+while(form.dealer.value < 17) 				//máy bốc liên tiếp cho đến khi có >17 điểm
 {form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");}
 }
-function User(form){   
+function User(form){                            //player bốc bài, called khi ấn 'HIT'
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
 else
 {cardCount+=1; form.say1.value=("You Get...");
 form.you.value = eval(form.you.value) + PickACard("You");}
+
+if(form.you.value==21 && cardCount==2)						//thêm function
+{form.say1.value=("Blackjack! You win!");					//có blackjack
+gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}			//là thắng
+ 
 if(form.you.value > 21)
 {form.say1.value=("You Busted!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
