--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blackjack</title>
+  <title>Blackjack..</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -72,7 +72,7 @@ form.you.value = eval(form.you.value) + PickACard("You");}
 
 if(form.you.value==21 && cardCount==2)						//thêm function
 {form.say1.value=("Blackjack! You win!");					//có blackjack
-gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}			//là thắng
+gameOver=0; form.numgames.value=eval(form.numgames.value)+1;}			//là thắng
  
 if(form.you.value > 21)
 {form.say1.value=("You Busted!");
