--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blackjack..</title>
+<!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
+#userDIV {
+    border: 1px solid black;
+    margin-bottom: 10px;
+}	
+#dealerDIV {
+    border: 1px solid black;
+    margin-bottom: 10px;
+}	
+	
+<!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
+  <title>Blackjack</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -9,7 +20,8 @@ var gameOver; var cardCount;
 function Shuffle(max){
 var num=Math.random()*max;
 return Math.round(num)+1;
-}	  
+}	 
+	  
 function getSuit(){
 suit = Shuffle(4);
 if(suit == 1) return "Spades";
@@ -17,6 +29,7 @@ if(suit == 2) return "Clubs";
 if(suit == 3) return "Diamonds";
 else return "Hearts";
 }
+	  
 function cardName(card){
 if(card == 1) return "Ace";
 if(card == 11) return "Jack";
@@ -24,6 +37,7 @@ if(card == 12) return "Queen";
 if(card == 13) return "King";
 return "" + card;
 }
+	  
 function cardValue(card,strWho){                                                //biến strwho để xác định lượt
 if(card == 1) {
 	if(strWho =="You" && document.display.you.value >10){
@@ -32,6 +46,7 @@ if(card == 1) {
  if(card > 10) return 10; 
 return card;
 }
+	  
 function PickACard(strWho){
 card = Shuffle(12); //tại sao 12?????????????????????????????????????????????????????
 suit = getSuit();
@@ -41,7 +56,8 @@ else
 document.display.say1.value=(cardName(card) + " of " + suit);			//say1 là bài của máy (dealer)
 return cardValue(card,strWho);
 }
-function NewHand(form){  
+	  
+function NewHand(form){  		//bắt đầu ván mới
 if(gameOver !=0) //gameOver là biến boolean thì phải, xem đã hết game chưa ??? bằng 0 là hết game rồi ???
 {form.say1.value=("Hand in Play!"); form.say2.value=(""); return;} 
 else
@@ -50,6 +66,7 @@ form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");
 form.you.value = eval(form.you.value) + PickACard("You");
 gameOver= -1; cardCount+=1;}
 }
+	  
 function Dealer(form){                               //function để máy bốc bài, called khi ấn 'STAND'
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
@@ -63,6 +80,7 @@ else
 while(form.dealer.value < 17) 				//máy bốc liên tiếp cho đến khi có >17 điểm
 {form.dealer.value = eval(form.dealer.value) + PickACard("Dealer");}
 }
+	  
 function User(form){                            //player bốc bài, called khi ấn 'HIT'
 if (gameOver ==0)
 {form.say1.value=("Deal the Cards!"); form.say2.value=(""); return;}
@@ -78,6 +96,7 @@ if(form.you.value > 21)
 {form.say1.value=("You Busted!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
 }
+	  
 function LookAtHands(form){
 if (gameOver ==0 || form.you.value<10 || cardCount <2){return;}
 else
@@ -96,6 +115,7 @@ gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
 {form.say1.value=("House Wins!"); form.say2.value=("Tough Luck!");
 gameOver=0; form.numgames.value=eval(form.numgames.value)-1;}
 }
+	  
 function setBj(){
 gameOver=0; cardCount=0; 
 document.display.dealer.value=""; 
@@ -133,10 +153,17 @@ window.onload = setBj;
 </tbody>
 </table>
 </form>
-
-
-
 	
+<!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
+<div id="userDIV">
+	Player 's cards
+</div>
+<div id="dealerDIV>
+	 Dealer
+</div>
+	
+
+<!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
 
 </body>
 </html>
