--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
+<style>	
 #userDIV {
     border: 1px solid black;
     margin-bottom: 10px;
@@ -10,9 +11,9 @@
     border: 1px solid black;
     margin-bottom: 10px;
 }	
-	
+</style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack</title>
+  <title>Blackjack.</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
