--- a/BJjsbank.html
+++ b/BJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack.</title>
+  <title>Blackjack."</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -58,7 +58,7 @@ document.display.say1.value=(cardName(card) + " of " + suit);			//say1 là bài 
 return cardValue(card,strWho);
 }
 	  
-function NewHand(form){  		//bắt đầu ván mới
+function NewHand(form){  		//bắt đầu ván mới, called khi ấn DEAL
 if(gameOver !=0) //gameOver là biến boolean thì phải, xem đã hết game chưa ??? bằng 0 là hết game rồi ???
 {form.say1.value=("Hand in Play!"); form.say2.value=(""); return;} 
 else
@@ -159,7 +159,7 @@ window.onload = setBj;
 <div id="userDIV">
 	Player 's cards
 </div>
-<div id="dealerDIV>
+<div id="dealerDIV">
 	 Dealer
 </div>
 	
