--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack;bb;</title>
+  <title>Blackjack;b</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -55,9 +55,7 @@ if(strWho =="You")
 {document.display.say2.value=(cardName(card) + " of " + suit);  //say2 là bài của người chơi
 //   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
  var x = document.createElement("IMG");
- x.setAttribute("width", "304");
-    x.setAttribute("height", "228");
-    x.setAttribute("alt", "The Pulpit Rock");
+ 
 if (card==1 && suit==1){
 	x.setAttribute("src", "ace_of_spades.png");};
 if (card==1 && suit==2){
@@ -108,6 +106,9 @@ if (card==6 && suit==4){
 	x.setAttribute("src", "6_of_hearts.png");}	;
 if (card==7 && suit==1){
 	x.setAttribute("src", "7_of_spades.png");}	;
+ x.setAttribute("width", "304");
+    x.setAttribute("height", "228");
+    x.setAttribute("alt", "The Pulpit Rock");
  
  
 document.getElementById("userDIV").appendChild(x);
