--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -108,7 +108,7 @@ if (card==7 && suit==1){
 	x.setAttribute("src", "7_of_spades.png");}	;
  x.setAttribute("width", "304");
     x.setAttribute("height", "228");
-    x.setAttribute("alt", "The Pulpit Rock");
+    x.setAttribute("alt", "card");
  
  
 document.getElementById("userDIV").appendChild(x);
