--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<style>	
+<!--<style>	
 #userDIV {
     border: 1px solid black;
     margin-bottom: 10px;
@@ -11,9 +11,9 @@
     border: 1px solid black;
     margin-bottom: 10px;
 }	
-</style>	
+</style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack</title>
+  <title>Blackjack.</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -217,12 +217,12 @@ window.onload = setBj;
 </table>
 </form>	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<div id="userDIV">
+<!--<div id="userDIV">
 	Player 's cards
 </div>
 <div id="dealerDIV">
 	 Dealer
-</div>
+</div>-->
 	
 
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
