--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack@@</title>
+  <title>Blackjack____@</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -226,7 +226,6 @@ window.onload = setBj;
 	
 
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<img id="userDIV"></img>
-
+<img id="userDIV" scr="red_joker.png">
 </body>
 </html>
