--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack_@</title>
+  <title>Blackjack@</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -54,7 +54,7 @@ suit = getSuit();
 if(strWho =="You")
 {document.display.say2.value=(cardName(card) + " of " + suit);  //say2 là bài của người chơi
 //   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
- var x = document.createElement("IMG");
+ //var x = document.createElement("IMG");
  
 if (card==1 && suit==1){
 	document.getElementById("userDIV").src="ace_of_spades.png";};
@@ -106,9 +106,9 @@ if (card==6 && suit==4){
 	document.getElementById("userDIV").src= "6_of_hearts.png";}	;
 if (card==7 && suit==1){
 	document.getElementById("userDIV").src= "7_of_spades.png";}	;
- x.setAttribute("width", "304");
-    x.setAttribute("height", "228");
-    x.setAttribute("alt", "card");
+ //x.setAttribute("width", "304");
+   // x.setAttribute("height", "228");
+    //x.setAttribute("alt", "card");
  
  
 //document.getElementById("userDIV").appendChild(x);
