--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack@</title>
+  <title>Blackjack@''</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -56,55 +56,55 @@ if(strWho =="You")
 //   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
  //var x = document.createElement("IMG");
  
-if (card==1 && suit==1){
+if (card==1 && suit=="Spades"){
 	document.getElementById("userDIV").src="ace_of_spades.png";};
-if (card==1 && suit==2){
+if (card==1 && suit=="Clubs"){
 	document.getElementById("userDIV").src= "ace_of_clubs.png";};
-if (card==1 && suit==3){
+if (card==1 && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "ace_of_diamonds.png";};
-if (card==1 && suit==4){
+if (card==1 && suit=="Hearts"){
 	document.getElementById("userDIV").src= "ace_of_hearts.png";};
-if (card==2 && suit==1){
+if (card==2 && suit=="Spades"){
 	document.getElementById("userDIV").src= "2_of_spades.png";};
-if (card==2 && suit==2){
+if (card==2 && suit=="Clubs"){
 	document.getElementById("userDIV").src= "2_of_clubs.png";};
-if (card==2 && suit==3){
+if (card==2 && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "2_of_diamonds.png";};
-if (card==2 && suit==4){
+if (card==2 && suit=="Hearts"){
 	document.getElementById("userDIV").src= "2_of_hearts.png";};
-if (card==3 && suit==1){
+if (card==3 && suit=="Spades"){
 	document.getElementById("userDIV").src= "3_of_spades.png";};
-if (card==3 && suit==2){
+if (card==3 && suit=="Clubs"){
 	document.getElementById("userDIV").src= "3_of_clubs.png";};
-if (card==3 && suit==3){
+if (card==3 && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "3_of_diamonds.png";};
-if (card==3 && suit==4){
+if (card==3 && suit=="Hearts"){
 	document.getElementById("userDIV").src="3_of_hearts.png";};
-if (card==4 && suit==1){
+if (card==4 && suit=="Spades"){
 	document.getElementById("userDIV").src= "4_of_spades.png";};
-if (card==4 && suit==2){
+if (card==4 && suit=="Clubs"){
 	document.getElementById("userDIV").src= "4_of_clubs.png";};
-if (card==4 && suit==3){
+if (card==4 && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "4_of_diamonds.png";};
-if (card==4 && suit==4){
+if (card==4 && suit=="Hearts"){
 	document.getElementById("userDIV").src= "4_of_hearts.png";};
-if (card==5 && suit==1){
+if (card==5 && suit=="Spades"){
 	document.getElementById("userDIV").src= "5_of_spades.png";};
-if (card==5 && suit==2){
+if (card==5 && suit=="Clubs"){
 	document.getElementById("userDIV").src= "5_of_clubs.png";};
-if (card==5 && suit==3){
+if (card==5 && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "5_of_diamonds.png";};
-if (card==5 && suit==4){
+if (card==5 && suit=="Hearts"){
 	document.getElementById("userDIV").src="5_of_hearts.png";};
-if (card==6 && suit==1){
+if (card==6 && suit=="Spades"){
 	document.getElementById("userDIV").src= "6_of_spades.png";}	;
-if (card==6 && suit==2){
+if (card==6 && suit=="Clubs"){
 	document.getElementById("userDIV").src= "6_of_clubs.png";}	;
-if (card==6 && suit==3){
+if (card==6 && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "6_of_diamonds.png";}	;
-if (card==6 && suit==4){
+if (card==6 && suit=="Hearts"){
 	document.getElementById("userDIV").src= "6_of_hearts.png";}	;
-if (card==7 && suit==1){
+if (card==7 && suit=="Spades"){
 	document.getElementById("userDIV").src= "7_of_spades.png";}	;
  //x.setAttribute("width", "304");
    // x.setAttribute("height", "228");
