--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack@''</title>
+  <title>Blackjack50-80</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -226,6 +226,6 @@ window.onload = setBj;
 	
 
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<img id="userDIV" src="red_joker.png">
+<img id="userDIV" src="red_joker.png" style="width:50px;height:80px">
 </body>
 </html>
