--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -226,6 +226,6 @@ window.onload = setBj;
 	
 
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
-<img id="userDIV" src="red_joker.png" style="width:50px;height:80px">
+<img id="userDIV" src="" style="width:120px;height:160px">
 </body>
 </html>
