--- a/zzzBJjsbank.html
+++ b/zzzBJjsbank.html
@@ -13,7 +13,7 @@
 }	
 </style>-->	
 <!--$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->	
-  <title>Blackjack12-16</title>
+  <title>Blackjack</title>
   <script language="JavaScript">
 // Mike McGrath (mike_mcgrath@lineone.net)
 <!-- Begin
@@ -56,13 +56,13 @@ if(strWho =="You")
 //   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
  //var x = document.createElement("IMG");
  
-if (card==1 && suit=="Spades"){
+if (card=="Ace" && suit=="Spades"){
 	document.getElementById("userDIV").src="ace_of_spades.png";};
-if (card==1 && suit=="Clubs"){
+if (card=="Ace" && suit=="Clubs"){
 	document.getElementById("userDIV").src= "ace_of_clubs.png";};
-if (card==1 && suit=="Diamonds"){
+if (card=="Ace" && suit=="Diamonds"){
 	document.getElementById("userDIV").src= "ace_of_diamonds.png";};
-if (card==1 && suit=="Hearts"){
+if (card=="Ace" && suit=="Hearts"){
 	document.getElementById("userDIV").src= "ace_of_hearts.png";};
 if (card==2 && suit=="Spades"){
 	document.getElementById("userDIV").src= "2_of_spades.png";};
@@ -106,6 +106,50 @@ if (card==6 && suit=="Hearts"){
 	document.getElementById("userDIV").src= "6_of_hearts.png";}	;
 if (card==7 && suit=="Spades"){
 	document.getElementById("userDIV").src= "7_of_spades.png";}	;
+if (card==8 && suit=="Spades"){
+	document.getElementById("userDIV").src= "8_of_spades.png";}	;
+if (card==9 && suit=="Spades"){
+	document.getElementById("userDIV").src= "9_of_spades.png";}	;
+if (card==10 && suit=="Spades"){
+	document.getElementById("userDIV").src= "10_of_spades.png";}	;
+if (card=="Jack" && suit=="Spades"){
+	document.getElementById("userDIV").src= "jack_of_spades2.png";}	;
+if (card=="Queen" && suit=="Spades"){
+	document.getElementById("userDIV").src= "queen_of_spades2.png";}	;
+if (card=="King" && suit=="Spades"){
+	document.getElementById("userDIV").src= "king_of_spades2.png";}	;
+if (card==7 && suit=="Clubs"){
+	document.getElementById("userDIV").src= "7_of_clubs.png";}	;
+if (card==8 && suit=="Clubs"){
+	document.getElementById("userDIV").src= "8_of_clubs.png";}	;
+if (card==9 && suit=="Clubs"){
+	document.getElementById("userDIV").src= "9_of_clubs.png";}	;
+if (card==10 && suit=="Clubs"){
+	document.getElementById("userDIV").src= "10_of_clubs.png";}	;
+if (card=="Jack" && suit=="Clubs"){
+	document.getElementById("userDIV").src= "jack_of_clubs2.png";}	;
+if (card=="Queen" && suit=="Clubs"){
+	document.getElementById("userDIV").src= "queen_of_clubs2.png";}	;
+if (card=="King" && suit=="Clubs"){
+	document.getElementById("userDIV").src= "king_of_clubs2.png";}	;
+if (card==7 && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "7_of_diamonds.png";}	;
+if (card==8 && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "8_of_diamonds.png";}	;
+if (card==9 && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "9_of_diamonds.png";}	;
+if (card==10 && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "10_of_diamonds.png";}	;
+if (card=="Jack" && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "jack_of_diamonds2.png";}	;
+if (card=="Queen" && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "queen_of_diamonds2.png";}	;
+if (card=="King" && suit=="Diamonds"){
+	document.getElementById("userDIV").src= "king_of_diamonds2.png";}	;
+
+
+
+ 
  //x.setAttribute("width", "304");
    // x.setAttribute("height", "228");
     //x.setAttribute("alt", "card");
